--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,1 +1,1 @@
-<word-component props-json='{"pokename":"<%= @poke.pokename %>"}'/>
+<word-component pokename=<%= @poke.pokename %> poketype=<%= @poke.poketype %>><word-component/>
