--- a/app/javascript/react/src/components/Word.css
+++ b/app/javascript/react/src/components/Word.css
@@ -20,6 +20,15 @@ body {
   margin: auto;
 }
 
+.confetti {
+  margin: auto;
+}
+
+.correct {
+  margin: auto;
+  font-weight: 700;
+}
+
 .gameArea {
   display: flex;
   flex-direction: column;
@@ -36,6 +45,15 @@ body {
   flex-direction: column;
   margin: auto;
   justify-content: space-around;
+}
+
+.types {
+  display: flex;
+}
+
+.attempt {
+  font-weight: 700;
+  font-size: 18px;
 }
 
 .input {
@@ -71,11 +89,11 @@ body {
 }
 
 .yellow {
-  color: #ffd733;
+  color: #ffcc00;
 }
 
 .green {
-  color: #33ff8d;
+  color: #00cc99;
 }
 
 .pink {
