--- a/app/assets/builds/application.css
+++ b/app/assets/builds/application.css
@@ -2,7 +2,7 @@
 
 /* app/javascript/react/src/components/Word.css */
 body {
-  background-color: #f1fff7;
+  background-color: #f0f5f5;
   font-size: 16px;
   font-family: Arial;
 }
