--- a/app/javascript/react/src/components/Word.css
+++ b/app/javascript/react/src/components/Word.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 
 body {
-  background-color: #f1fff7;
+  background-color: #f0f5f5;
   font-size: 16px;
   font-family: Arial;
 }
