--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,1 +1,1 @@
-<word-component pokename=<%= @poke.pokename %> poketypes=<%= @poke.poketype %>><word-component/>
+<word-component pokename=<%= @poke.pokename %> poketypes=<%= @poke.poketype %> allPokes=<%= @all_pokes %>><word-component/>
