--- a/app/javascript/react/src/components/Word.css
+++ b/app/javascript/react/src/components/Word.css
@@ -18,6 +18,7 @@ body {
   font-size: 18px;
   font-weight: 800;
   margin: auto;
+  margin-bottom: 10px;
 }
 
 .confetti {
@@ -56,10 +57,17 @@ body {
   font-size: 18px;
 }
 
+.counter {
+  margin-left: 6px;
+  font-size: 10px;
+  margin: auto;
+}
+
 .input {
   font-size: 16px;
   height: 30px;
   margin-bottom: 10px;
+  width: 190px;
 }
 
 .error {
@@ -131,28 +139,4 @@ body {
 .button:hover,
 .button:focus {
   background-color: #f082ac;
-}
-
-.tooltip {
-  position: relative;
-  display: inline-block;
-  border-bottom: 1px dotted black;
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: black;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-
-  /* Position the tooltip */
-  position: absolute;
-  z-index: 1;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
 }
