--- a/app/javascript/react/src/components/Word.css
+++ b/app/javascript/react/src/components/Word.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Rubik:700&display=swap");
 
 body {
-  background-color: #f0f5f5;
+  background-color: #ffffff;
   font-size: 16px;
   font-family: Arial;
 }
@@ -139,4 +139,10 @@ body {
 .button:hover,
 .button:focus {
   background-color: #f082ac;
+}
+
+.image {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
